Fix bg on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,20 @@
 }
 
 /* Full screen Image */
-html {
-  background: url(../img/bg2.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+html{
+	/* This image will be displayed fullscreen */
+	background:url('../img/bg2.jpg') no-repeat center center;
+
+	/* Ensure the html element always takes up the full height of the browser window */
+	min-height:100%;
+
+	/* The Magic */
+	background-size:cover;
+}
+
+body{
+	/* Workaround for some mobile browsers */
+	min-height:100%;
 }
 
 h1 {
